<resources>
    <string name="app_name">StarAppWars</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">People</string>
    <string name="tab_text_2">Planets</string>
    <string name="tab_text_3">starships</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_wars">STAR WARS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnPeople">People</string>
    <string name="btnPlanets">Planets</string>
    <string name="btnStarShips">StarShips</string>
    <string name="action_exit">exit</string>
    <string name="b_squeda">Search</string>
    <string name="refTwitter">https://twitter.com/starwars</string>
    <string name="refFbApp">fb://page/466624876725603?referrer=app_link</string>
    <string name="refFbWeb">https://www.facebook.com/Star-Wars-Official-Homepage-466624876725603/</string>
    <string name="refOfWeb">https://www.starwars.com/</string>
    <string name="textPeople">The world of Star Wars has left us wonderful characters. Do you want information about them? Go in and see what you want. Enjoy it</string>
    <string name="tvPF1">Name :</string>
    <string name="tvPF2">height :</string>
    <string name="tvPF3">weight :</string>
    <string name="tvPF4">Eye Color :</string>
    <string name="tvPF5">Skin Color :</string>
    <string name="tvPF6">Hair Color :</string>
    <string name="tvPF7">Home World :</string>
    <string name="tvPF8">Birth Year :</string>
    <string name="tvPF9">Sex :</string>

</resources>

