<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsplash"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.javier.starapiwars.logicPeople.PeopleFinalActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivPeopleFinal"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="#EEE"
        app:civ_border_width="0dp"
        app:civ_shadow="false"
        app:civ_shadow_color="#999"
        app:civ_shadow_radius="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF1"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF1" />

        <TextView
            android:id="@+id/tvNombrePeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF2"
            android:textColor="#ffee00"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAlturaPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF3"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF3" />

        <TextView
            android:id="@+id/tvPesoPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF4"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF4" />

        <TextView
            android:id="@+id/tvColorOjosPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF5"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF5" />

        <TextView
            android:id="@+id/tvColorPielPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tvPF6"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF6" />

        <TextView
            android:id="@+id/tvColorPeloPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF7"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF7" />

        <TextView
            android:id="@+id/tvPlanetaPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF8"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF8" />

        <TextView
            android:id="@+id/tvYearPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPF9"
            android:textColor="#ffee00"
            android:textSize="20sp"
            tools:text="@string/tvPF9" />

        <TextView
            android:id="@+id/tvGenderPeopleFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:textColor="#ffee00"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>
